# Profiter314

./: CMakeLists.txt  Makefile  README.md  main.cpp
Profiter/: FileOrganizer.cpp  FileOrganizer.hpp  Holder.cpp  Holder.hpp  Profit.cpp  Profit.hpp  TimeEngine.cpp  TimeEngine.hpp  Transfer.cpp  Transfer.hpp
Profiter/Misc/: Config.hpp  Globals.h  Helper.h
RandomNames/: clientNames.txt
